Updates for v *.40
- allow control `@` error operator inside echo statement Closes #93
- `@props` variable completion from array list
- code refactoring and renaming
   - implement livewire plugin class to handle new directives. Part of #92
- enable comment handler for echo tags outside of html
- fix customDirectives load on null project
- fix formatting missing indentation for directive block start
- add info for unit test troubleshooting
- update Readme.md